# OpenCL-playgorund

./: .gitignore  README.md
amd/: Makefile
amd/C++Amp/: C++AmpSamplesVS12.sln  Makefile
amd/aparapi/: Makefile  setenv_aparapi.bat  setenv_aparapi.sh
amd/bolt/: BoltSamplesVS10.sln  BoltSamplesVS12.sln  Makefile
amd/opencl/: Makefile  OpenCLSamples.sln  OpenCLSamplesVS10.sln  OpenCLSamplesVS12.opensdf  OpenCLSamplesVS12.sln  UpgradeLog.XML  UpgradeLog.htm
ctai/autotools/: README
ctai/build-sys-template/: client.mk  configure.ac  configure.in  mach
ctai/build-sys-template/python/mach/mach/: main.py
ctai/moz-build-sys/: client.mk  configure.in
ctai/selfExcrises/: mach
ctai/sw-build-sys/: README
geckoWCL/: webcl-dom-skeleton.diff  webcl-idl.diff  webcl-lib.patch  webcl-security.diff
intel/: OpenCLSamples_2008.sln  OpenCLSamples_2010.sln  readme.txt
intel/BitonicSort/: BitonicSort.cl  BitonicSort.cpp  BitonicSort.vcproj  BitonicSort.vcxproj  BitonicSort.vcxproj.filters  stdafx.h
intel/GodRays/: GodRays.cl  GodRays.cpp  GodRays.vcproj  GodRays.vcxproj  GodRays.vcxproj.filters  GodRaysNative.cpp
intel/MediaSDKInterop/: MediaSDKInterop.vcproj  MediaSDKInterop_2008.sln  MediaSDKInterop_2010.sln  MediaSDKInterop_2010.vcxproj  MediaSDKInterop_2010.vcxproj.filters  _color_control.cl  _wave.cl
intel/MedianFilter/: MedianFilter.cl  MedianFilter.cpp  MedianFilter.vcproj  MedianFilter.vcxproj  MedianFilter.vcxproj.filters  stdafx.h
intel/ResourceSharing/: ResourceSharing_2008.sln  ResourceSharing_2010.sln
intel/ShallowWater/: ShallowWater.cl  (+5 more)
(+1559 files in other folders)
